@@ -10,6 +10,7 @@ netdiscovery/netinventory:
  * Added total color pages counter support
 * Don't assume colors table was read: fixes black toner detection on many HP printers
 * Added Microtik devices support
+* Enhanced Epson printers support, including model name, serial number and firmwares
 * Updated LLDP support
 
 2.4 Fri, 29 Dec 2017
